# formdex

./: .gitignore  AGENTS.md  IMPLEMENTATION_SUMMARY.md  README.md  api.py  config.json  demo_detect.py  formdex.sh  progress.txt  pyproject.toml  setup.sh
.agents/skills/augment/scripts/: run.py
.agents/skills/classify/: SKILL.md
.agents/skills/classify/scripts/: collect_data.py  inference.py  train.py
.agents/skills/collect/scripts/: collect_form.py
.agents/skills/formdex/: SKILL.md
.agents/skills/label/scripts/: dispatch.sh  merge_classes.py
.agents/skills/train/scripts/: run.py
api_jobs/13cb5e2ced50/: results.json
api_jobs/aec98776d129/: results.json
api_test_output/: results.json
demo_output/: extracted_data.json
docs/: ENV_SETUP_GUIDE.md  architecture.md  changelog.md  form_labeling_comparison.md  labeling_modes_explained.md  models.md  paperspace_workflows.md  skills.md  usage.md
formdex_test_output/: api_result.json
runs/ud100-form/: classes.txt
scripts/: check_env.sh  compare_form_labeling.sh  fix_env.sh  train_paperspace.sh  train_paperspace_with_vision.sh
shared/: utils.py
