[project]
name = "formdex"
version = "0.1.0"
description = "Intelligent PDF form field detection, extraction, and analysis powered by YOLOv8"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "yt-dlp>=2024.1.0",
    "ultralytics>=8.0.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
    "pymupdf>=1.24.0",
    "faker>=20.0.0",
    "pytesseract>=0.3.13",
    "fastapi>=0.128.7",
    "uvicorn>=0.40.0",
    "python-multipart>=0.0.22",
]

[project.optional-dependencies]
gemini = ["google-generativeai>=0.5.0"]

[tool.hatch.build.targets.wheel]
packages = ["shared", "pipeline"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
